[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asheis"
version = "0.1.0"
description = "A Python package for calibrating and analyzing EIS (EUV Imaging Spectrometer) data"
readme = "README.md"
authors = [
    { name = "Andy To", email = "andysh.to@esa.int" }
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
keywords = ["solar physics", "EIS", "calibration", "spectroscopy", "astronomy"]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "astropy>=5.0.0",
    "sunpy>=4.0.0",
    "matplotlib>=3.5.0",
    "tqdm>=4.65.0",
    "eispac>=0.95.0",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=4.0",
]

[tool.setuptools]
packages = ["eis_calibration", "asheis"]